# C-PROJECTION

./: CMakeLists.txt  to calculate the area of regular hexagon.c  to check the line straight or not.c  to find area of the circle.c  to input a number & check whether it is positive or negative.c  to print the address of 5 variables.c  to print the ascii value of any charecter.c  to print the triangle.c  to swap 2 numbers.c  to take the name ,programe mail 50 from the user & display the details and write displaying the approx age of the user.c  write a c programe to convert celsius to farhenit.c
