cmake_minimum_required(VERSION 3.26)
project(C_PROJECTION C)

set(CMAKE_C_STANDARD 11)

add_executable(C_PROJECTION
        "to print the address of 5 variables.c"
        "to swap 2 numbers.c"
        "to calculate the area of regular hexagon.c"
        "to print the ascii value of any character.c"
        "to take the name ,programe mail 50 from the user & display the details and write displaying the approx age of the user.c"
        "write a c programme to convert celsius to farhenit.c"
        "to print the triangle.c"
        "to find area of the circle.c"
        "to check the line straight or not.c")